--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,13 +6,14 @@
 
 /* banner */
 .banner {
-    background-image: url('../resources/Banner\ Image.png');
-    background-size: contain;
-    background-position: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)), url('../resources/Banner\ Image.png');
     height: 600px;
+    background-position: top center;
     background-repeat: no-repeat;
-    margin: 50px 140px;
-    background: linear-gradient(rgb(0, 0, 0.1), rgba(0, 0, 0, 0.)), url('../resources/Banner\ Image.png');
+    margin-left: 100px;
+    margin-right: 100px;
+    border-radius: 15px;
+    margin-top: 50px;
 }
 
 .banner-greeting {
@@ -31,7 +32,9 @@
 }
 
 .banner-description {
-    width: 590px;
-    padding-top: 135px;
-    padding-left: 340px;
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    margin-left: 350px;
+    padding-top: 130px;
 }
